Fix mobile navigation rounded corners and center About page mission section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+<!-- ========================================
+     PAWPALS PET SUPPLY - HOME PAGE
+     Main landing page for the website
+======================================== -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Head section: meta tags, title, and stylesheet link -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PawPals Pet Supply - Home</title>
@@ -8,6 +13,7 @@
 </head>
 <body>
     <!-- ========== HEADER NAVIGATION ========== -->
+    <!-- Site header with logo and navigation menu -->
     <header class="header">
         <div class="header-container">
             <a href="index.html" class="logo">
@@ -38,6 +44,7 @@
     </header>
 
     <!-- ========== HERO SECTION ========== -->
+    <!-- Main hero section with headline, description, and images -->
     <section class="hero">
         <div class="hero-content">
             <h1>Happy Pets, Happy Life! <span class="paw-icon">🐾</span></h1>
@@ -51,11 +58,13 @@
     </section>
 
     <!-- ========== PAW DIVIDER ========== -->
+    <!-- Decorative paw divider -->
     <div class="paw-divider">
         <span>🐾</span><span>🐾</span><span>🐾</span>
     </div>
 
     <!-- ========== FEATURES SECTION ========== -->
+    <!-- Section highlighting main features of PawPals -->
     <section class="features">
         <h2>Why Choose PawPals?</h2>
         <div class="features-grid">
@@ -78,6 +87,7 @@
     </section>
 
     <!-- ========== PRODUCT HIGHLIGHTS ========== -->
+    <!-- Featured products section -->
     <section class="product-highlights">
         <h2>Featured Products <span class="ear-icon">🐱</span></h2>
         <div class="products-grid">
@@ -103,6 +113,7 @@
     </section>
 
     <!-- ========== FOOTER ========== -->
+    <!-- Site footer with brand, links, and social icons -->
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-brand">
@@ -148,6 +159,7 @@
         </div>
     </footer>
 
+    <!-- Main JavaScript file -->
     <script src="script.js"></script>
 </body>
 </html>
